objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Member Retention Specialist</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Online Account Opening</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccountOpeningTransactionId__c</fullName>
        <description>Transaction ID associated with an online account opening transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AccountOpeningTransactionId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationId__c</fullName>
        <description>A unique non-sequential identifier that can be used to identifier the account opening application in all public URLs.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The unique identifier for the account opening process.</inlineHelpText>
        <label>Application ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Promo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow the user to select that the promotional offer has been applied to the new account</description>
        <inlineHelpText>Has the promotional offer been applied?</inlineHelpText>
        <label>Applied Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AvokaData__c</fullName>
        <description>The latest data payload for the associated Avoka Job.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Avoka Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AvokaError__c</fullName>
        <description>Any error that occurs while parsing/processing the Avoka data will be recorded here.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Avoka Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AvokaFormLink__c</fullName>
        <formula>IF(NOT(ISBLANK(AvokaFormUrl__c)), &apos;&lt;a href=&quot;&apos; &amp; AvokaFormUrl__c &amp; &apos;&quot; target=&quot;_blank&quot;&gt;Open Avoka App&lt;/a&gt;&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Avoka Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvokaFormName__c</fullName>
        <description>The latest form name for the associated Avoka Job.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Avoka Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvokaFormUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Avoka Form URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvokaForm__c</fullName>
        <description>Indicates the latest form code for the associated Avoka Job.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Avoka Form</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvokaJob__c</fullName>
        <description>The Avoka Job Reference Code that the case is associated with.  This is used to identify if an active case is already open for a job when the AvokaDeliveryProcessor receives new information.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Avoka Job</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvokaStatus__c</fullName>
        <description>The latest status for the associated Avoka Job.</description>
        <label>Avoka Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AvokaTrackingCode__c</fullName>
        <description>The latest tracking code for the associated Avoka Job.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Avoka Tracking Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvokaTransactionStatus__c</fullName>
        <description>The latest transaction status for the associated Avoka Job.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Avoka Transaction Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallBackNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the number you get from the member so you can call back if you get disconnected.</inlineHelpText>
        <label>Call Back Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attrition</fullName>
                </value>
                <value>
                    <fullName>Asset Watch</fullName>
                </value>
                <value>
                    <fullName>Mortgage Payoff Saves</fullName>
                </value>
                <value>
                    <fullName>eBranch Lockout</fullName>
                </value>
                <value>
                    <fullName>eBranch Not Signed In</fullName>
                </value>
                <value>
                    <fullName>Dormancy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <inlineHelpText>If Case was not Resolved, choose how it was closed from drop-down.</inlineHelpText>
        <label>Closed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolved__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Could not get in touch with member.</fullName>
                </value>
                <value>
                    <fullName>Could not match to a member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_of_Complaint__c</fullName>
        <description>For Member Relation Case Page Layout</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time of Complaint</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distance_to_Branch__c</fullName>
        <label>Distance to Branch</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EligibilityResponse__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The membership eligibility response provided by the member or prospective member during the online account opening process.</inlineHelpText>
        <label>Eligibility Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Cluster_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Cluster Group</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Cluster_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Cluster Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to indicate whether a form was submitted during this case.</description>
        <inlineHelpText>Use to indicate that you submitted a form in Helix as part of this call</inlineHelpText>
        <label>Form Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Income</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Left_Message_One__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When first message is left for customer.</description>
        <label>Left Message One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Left_Message_Three__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the third message is left for customer.</description>
        <label>Left Message Three</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Left_Message_Two__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When Second Message is left foe customer.</description>
        <label>Left Message Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MCCClass__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Account Specific</fullName>
                </value>
                <value>
                    <fullName>Branch Services</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business Contact Maintenance</fullName>
                </value>
                <value>
                    <fullName>Business eBranch</fullName>
                </value>
                <value>
                    <fullName>Check Services</fullName>
                </value>
                <value>
                    <fullName>Consumer Loans</fullName>
                </value>
                <value>
                    <fullName>Debit / Credit Card</fullName>
                </value>
                <value>
                    <fullName>Deposit Products</fullName>
                </value>
                <value>
                    <fullName>Dropped Call</fullName>
                </value>
                <value>
                    <fullName>eBranch</fullName>
                </value>
                <value>
                    <fullName>Electronic Services</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Hours of Operation</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>Locations</fullName>
                </value>
                <value>
                    <fullName>Membership Requirements</fullName>
                </value>
                <value>
                    <fullName>Merchant Services</fullName>
                </value>
                <value>
                    <fullName>Mortgage Loan Products</fullName>
                </value>
                <value>
                    <fullName>NPS Follow Up</fullName>
                </value>
                <value>
                    <fullName>Payments</fullName>
                </value>
                <value>
                    <fullName>Personal Maintenance</fullName>
                </value>
                <value>
                    <fullName>Phone Call Transfer</fullName>
                </value>
                <value>
                    <fullName>Promotions</fullName>
                </value>
                <value>
                    <fullName>Special Event</fullName>
                </value>
                <value>
                    <fullName>Tax Questions</fullName>
                </value>
                <value>
                    <fullName>Touch Tone Teller (TTT)</fullName>
                </value>
                <value>
                    <fullName>Wrong Department</fullName>
                </value>
                <value>
                    <fullName>Business Questions</fullName>
                    <isActive>false</isActive>
                    <label>Business Questions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MCCSubclass__c</fullName>
        <description>All possible subclasses</description>
        <label>Subclass</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MCCClass__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1098</fullName>
                </value>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Account/Routing Number</fullName>
                </value>
                <value>
                    <fullName>Account Balance</fullName>
                </value>
                <value>
                    <fullName>Account Closure</fullName>
                </value>
                <value>
                    <fullName>Account Holds</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Account Locks</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Account Names</fullName>
                </value>
                <value>
                    <fullName>Add/Remove Account</fullName>
                </value>
                <value>
                    <fullName>Add Joint</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Adjustments</fullName>
                </value>
                <value>
                    <fullName>Authorized Signers</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Auto Refinance</fullName>
                </value>
                <value>
                    <fullName>AVP</fullName>
                </value>
                <value>
                    <fullName>Beneficial Ownership</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Branch Performance</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business Development &amp; Public Relations</fullName>
                </value>
                <value>
                    <fullName>Business Lending</fullName>
                </value>
                <value>
                    <fullName>Business Membership Requirements</fullName>
                </value>
                <value>
                    <fullName>Business Relationship</fullName>
                </value>
                <value>
                    <fullName>Business Underwriting</fullName>
                </value>
                <value>
                    <fullName>Card Activation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MemberSentiment__c</fullName>
        <label>Member Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - very unsatisfied</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - unsatisfied</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - neutral</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>4 - satisfied</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>5 - very satisfied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opened_Hour__c</fullName>
        <formula>MID(TEXT(CreatedDate), 12, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates the hour of the day the case was opened (UTC)</inlineHelpText>
        <label>Opened Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pain_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by team members to indicate that the case relates to a pain point that needs to be reviewed.</description>
        <label>Pain Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Number__c</fullName>
        <description>Person number for MRS data insert and extract.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Person Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Department__c</fullName>
        <label>Primary Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Branches</fullName>
                </value>
                <value>
                    <fullName>Branch Performance</fullName>
                </value>
                <value>
                    <fullName>Business Development &amp; Public Relations</fullName>
                </value>
                <value>
                    <fullName>Business Relationship</fullName>
                </value>
                <value>
                    <fullName>Card Services</fullName>
                </value>
                <value>
                    <fullName>Commercial Lending</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Consumer Lending</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Financial Service Center</fullName>
                </value>
                <value>
                    <fullName>Help Desk</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Member Assistance</fullName>
                </value>
                <value>
                    <fullName>MCC</fullName>
                </value>
                <value>
                    <fullName>Member Experience</fullName>
                </value>
                <value>
                    <fullName>Member Relationship</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Private Client</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Virtual Service Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductMajorCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Major Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductMinorCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Minor Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This name should correspond to the product major and minor codes.</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Promotion that the member is taking advantage of</inlineHelpText>
        <label>Promotion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_Written_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualified Written Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rank_Score__c</fullName>
        <label>Rank Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Treasure Valley</fullName>
                </value>
                <value>
                    <fullName>North Idaho</fullName>
                </value>
                <value>
                    <fullName>South East Idaho</fullName>
                </value>
                <value>
                    <fullName>Magic Valley</fullName>
                </value>
                <value>
                    <fullName>Out of State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved_Member_Sentiment__c</fullName>
        <label>Resolved Member Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - very unsatisfied</fullName>
                </value>
                <value>
                    <fullName>2 - unsatisfied</fullName>
                </value>
                <value>
                    <fullName>3 - neutral</fullName>
                </value>
                <value>
                    <fullName>4 - satisfied</fullName>
                </value>
                <value>
                    <fullName>5 - very satisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResponsibleParty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The guardian that is responsible for a youth account case.</description>
        <label>Responsible Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Email_Yes_No__c</fullName>
        <inlineHelpText>You&apos;ve checked Applied Promo. Do you want to send email to the member?</inlineHelpText>
        <label>Send Email Yes/No</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Applied_Promo__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Yes_No_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complaint Summary</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Case Summary</fullName>
                </value>
                <value>
                    <fullName>Official Response</fullName>
                </value>
                <value>
                    <fullName>Close the Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talking_Points__c</fullName>
        <description>Products or services that were talked about with the customer.</description>
        <inlineHelpText>Products or services that were talked about with the customer.</inlineHelpText>
        <label>Talking Points</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>eBranch</fullName>
                </value>
                <value>
                    <fullName>VSC</fullName>
                </value>
                <value>
                    <fullName>Remote Deposit</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Co-op ATM</fullName>
                </value>
                <value>
                    <fullName>Cross-sell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Form__c</fullName>
        <description>Used to track the type of form submitted.</description>
        <label>Type of Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Please choose the form submitted:</fullName>
                    <default>true</default>
                    <label>Please choose the form submitted:</label>
                </value>
                <value>
                    <fullName>ACH Dispute</fullName>
                </value>
                <value>
                    <fullName>Auto Payoff</fullName>
                </value>
                <value>
                    <fullName>GAP Cancellation</fullName>
                </value>
                <value>
                    <fullName>Hot Card</fullName>
                </value>
                <value>
                    <fullName>Skip-a-Pay</fullName>
                </value>
                <value>
                    <fullName>Subsequent Action</fullName>
                </value>
                <value>
                    <fullName>Title Release</fullName>
                </value>
                <value>
                    <fullName>Travel Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>avokaApplicationInfoJSON__c</fullName>
        <description>Stores any information from the Avoka Form data received by Salesforce for use by lightning components.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>avoka Application Info JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>AvokaTrackingCode__c</columns>
        <columns>AvokaForm__c</columns>
        <columns>NAME</columns>
        <columns>ProductName__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Better_Business_Bureau_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.TYPE</columns>
        <columns>MCCClass__c</columns>
        <columns>MCCSubclass__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Close the Case</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.ComplaintRecordType</value>
        </filters>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Better Business Bureau</value>
        </filters>
        <label>All Closed Better Business Bureau Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Complaint_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.TYPE</columns>
        <columns>MCCClass__c</columns>
        <columns>MCCSubclass__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.ComplaintRecordType</value>
        </filters>
        <label>All Closed Complaint Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Department_of_Finance_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.TYPE</field>
            <operation>equals</operation>
            <value>Department of Finance</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Department of Finance Case</label>
    </listViews>
</CustomObject>